# openapi-mcp-swagger

./: .coverage  .coverage.Ivans-MacBook-Pro.local.25445.XLSFHvax  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECT_HANDOFF.md  CI_TEST.md  CONTRIBUTING.md  DEPENDENCIES.md  DEVELOPMENT.md  PROJECT_STATUS.md  QUICKSTART_CURSOR_CLAUDE.md  README.md  _config.yml  coverage.xml  daemon_server.py  index.html  pyproject.toml  setup.py  swagger-mcp.yaml  swagger-mcp.yaml.backup
.github/workflows/: ci.yml  pages.yml
archive/old-docs/: AUTOMATIC_DB_POPULATION.md  FINAL_GETEXAMPLE_FIX.md  FINAL_MCP_SERVER_STATUS.md  FINAL_MINOR_FIXES.md  FINAL_SERVER_STATUS_V2.md  SCHEMA_NAMING_GUIDE.md
configs/: claude-code-mcp.json  cursor-mcp.json
data/: swagger_mcp.db-shm  swagger_mcp.db-wal
docs/: INSTALLATION.md  README.md  brief.md  prd.md
docs/analysis/: context-window-efficiency-analysis.md
docs/api/: MCP_PROTOCOL.md
docs/architecture/: coding-standards.md  source-tree.md  tech-stack.md
docs/brief/: constraints-assumptions.md  executive-summary.md  goals-success-metrics.md  index.md  mvp-scope.md  next-steps.md  post-mvp-vision.md  problem-statement.md  proposed-solution.md  risks-open-questions.md  target-users.md  technical-considerations.md
docs/dev-comments/: README.md  issue-001-getexample-validation.md  issue-002-empty-categories-table.md  issue-003-missing-mcp-tool-registration.md  (+1 more)
mcp-server-tmp0v52kri1/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmp1erfo0s4/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmp1jv49kb0/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmp1so91svx/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmp2pslz1wz/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmp33xz7is6/: .env.example  README.md  requirements.txt  server.py  start.bat
mcp-server-tmp3o0i685k/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmp4czhn174/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmp56rhmp_u/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmp5all7atv/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmp5asjstym/: .env.example  README.md  requirements.txt  server.py  start.bat
mcp-server-tmp605imbcz/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmp6we9d21x/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmp78ooca7z/: .env.example  README.md  docker-compose.yml  requirements.txt  server.py
mcp-server-tmp85l8bncn/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmp9ijj0xoo/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmp_1rs_h4z/: .env.example  README.md  mcp-server.service  requirements.txt  server.py
mcp-server-tmpap7wbl1q/: .env.example  README.md  requirements.txt  server.py  start.sh
mcp-server-tmpaqfex66i/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpaqoly1b6/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpb16sdqvc/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpdnr8oip8/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpeqkpi3h9/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpgid0jrn1/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpgnx48fwq/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpi8ln798n/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpkavimnp5/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpkq7qaetf/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpkwem7sor/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpmbvesliu/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpmk5r4pz_/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpo6s8cfpt/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpom22tjkf/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpoz5nb90l/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpp48ducy9/: .env.example  Dockerfile  README.md  requirements.txt  server.py
mcp-server-tmppjhxby44/: .env.example  README.md  docker-compose.yml  requirements.txt  server.py
mcp-server-tmpppeq4g78/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmppq4p6kyo/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpqf6it3oc/: .env.example  Dockerfile  README.md  requirements.txt  server.py
mcp-server-tmprbj8xydp/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpsqiptn22/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpthwpvf5b/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpuqnnumfe/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpur4mfrxf/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpv4dday7z/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpvdobp2ny/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpvrklhh4n/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpvzhfp2ox/: .env.example  .gitignore  README.md  requirements.txt  server.py
mcp-server-tmpwa5y2js5/: .env.example  README.md  requirements.txt  server.py  start.sh
mcp-server-tmpxn6we1fl/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpxr9cxszi/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpyj03g6me/: .env.example  README.md  requirements.txt  server.py
mcp-server-tmpzng_r_iy/: .env.example  README.md  mcp-server.service  requirements.txt  server.py
mcp-server-tmpzzonv_69/: .env.example  README.md  requirements.txt  server.py
scripts/: setup-dev.sh  standalone-mcp.py
test-mcp-server/: .env.example  Dockerfile  README.md  docker-compose.yml  mcp-server.service  requirements.txt  server.py  start.bat  start.sh
(+249 files in other folders)
