[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "openapi-mcp-swagger"
version = "0.1.0"
description = "Universal Swagger → MCP Server Converter"
authors = [{name = "salacoste"}, {name = "BMAD Development Team"}]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # Core framework
    "mcp>=1.0.0",
    # Database and storage
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0",  # Required for SQLAlchemy async support
    # JSON and API processing
    "ijson>=3.2.3",
    "pydantic>=2.5.0",
    "openapi-spec-validator>=0.7.1",
    "jsonref>=1.1.0",
    # Search and indexing
    "whoosh>=2.7.4",
    "rank-bm25>=0.2.2",
    # CLI and logging
    "click>=8.1.7",
    "structlog>=23.2.0",
    "pyyaml>=6.0.1",
    # Template generation
    "jinja2>=3.1.2",
    "aiohttp (>=3.12.15,<4.0.0)",
    # System utilities
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "faker>=20.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "flake8-docstrings>=1.7.0",
    "flake8-type-checking>=2.7.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "tox>=4.11.0",
]

[project.scripts]
openapi-mcp-swagger = "swagger_mcp_server.main:cli"
swagger-mcp-server = "swagger_mcp_server.main:cli"  # Backward compatibility

[tool.poetry]
name = "openapi-mcp-swagger"
version = "0.1.0"
description = "Universal Swagger → MCP Server Converter"
authors = ["salacoste", "BMAD Development Team"]
readme = "README.md"
packages = [{include = "swagger_mcp_server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# MCP Protocol
mcp = "^1.0.0"
# JSON Processing
ijson = "^3.2.3"
pydantic = "^2.5.0"
# Database
aiosqlite = "^0.19.0"
# CLI
click = "^8.1.7"
pyyaml = "^6.0.1"
# Logging
structlog = "^23.2.0"
# Search
whoosh = "^2.7.4"
rank-bm25 = "^0.2.2"
# OpenAPI
openapi-spec-validator = "^0.7.1"
jsonref = "^1.1.0"
# Templates
jinja2 = "^3.1.2"
# System utilities
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-benchmark = "^4.0.0"
faker = "^20.1.0"
# Code Quality
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
flake8-type-checking = "^2.7.0"
mypy = "^1.7.0"
# Development
pre-commit = "^3.5.0"
tox = "^4.11.0"

[tool.poetry.scripts]
swagger-mcp-server = "swagger_mcp_server.main:cli"

[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
known_first_party = ["swagger_mcp_server"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "ijson.*",
    "whoosh.*",
    "rank_bm25.*",
    "mcp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=swagger_mcp_server",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=5",
    "--disable-warnings",
]
testpaths = ["src/tests"]
norecursedirs = [".*", "build", "dist", "*.egg", "venv", ".venv"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance/benchmark tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.flake8]
max-line-length = 79
extend-ignore = [
    "E203",  # whitespace before ':'
    "E402",  # module level import not at top of file
    "E501",  # line too long (handled by black)
    "E712",  # comparison to True should be 'if cond is True:' or 'if cond:'
    "E722",  # do not use bare 'except'
    "W503",  # line break before binary operator
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "D107",  # Missing docstring in __init__
    "D200",  # One-line docstring should fit on one line
    "D202",  # No blank lines allowed after function docstring
    "D301",  # Use r""" if any backslashes in a docstring
    "D400",  # First line should end with a period
    "D401",  # First line should be in imperative mood
    "D402",  # First line should not be the function's signature
    "D415",  # First line should end with a period, question mark, or exclamation point
    "F401",  # imported but unused (too noisy for development)
    "F541",  # f-string is missing placeholders
    "F811",  # redefinition of unused variable
    "F821",  # undefined name
    "F823",  # local variable referenced before assignment
    "F841",  # local variable is assigned to but never used
    "TC002", # Move third-party import into type-checking block
    "TC003", # Found non-type-checking import
]
exclude = [
    ".git",
    "__pycache__",
    ".tox",
    ".eggs",
    "*.egg",
    "build",
    "dist",
    ".venv",
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:D,F401,F811",  # Ignore all docstring and import issues in tests
]